syntax = "proto3";

import "beschedsrv/proto/beschedsrv.proto";

option go_package = "sigmaos/lcschedsrv/proto";

service LCSched {
  rpc Enqueue(EnqueueRequest) returns (EnqueueResponse);
  rpc RegisterSchedd(RegisterScheddRequest) returns (RegisterScheddResponse);
}

message RegisterScheddRequest {
  string kernelID = 1;
  uint32 mcpuInt = 2;
  uint32 memInt = 3;
}

message RegisterScheddResponse {
}
